# ai-usage-tool

./: .env.example  .gitignore  CHANGELOG.md  README.md  SECURITY.md  aiusage-config.example.json  aiusage.py  app.py  mcp_chatgpt_server.py  mcp_http_server.py  mcp_server.py  pyproject.toml  report_prepare.py  requirements.txt  run_dashboard.bat  run_dashboard.command  run_export_today.bat  run_export_today.command  run_workday_report.bat  workreport.py
docs/: AI_USAGE_TOOL_DELIVERY_PLAN.md  CHATGPT_MCP_INTEGRATION_PLAN.md  daily-report-schema.md
tests/: test_mcp_chatgpt_server.py  test_mcp_http_server.py  test_mcp_server.py  test_workreport.py
